# via

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  install-plugin.bat  openclaw.json  self-install.bat  setup.bat  uninstall-plugin.bat
.opencode/: opencode.json
.opencode/agents/: via-gui.md
.opencode/skills/via-gui/: SKILL.md
via-cdylib/: Cargo.toml
via-cdylib/src/: lib.rs
via-cli/: Cargo.toml
via-cli/src/: main.rs
via-engine/: Cargo.toml
via-engine/src/: desktop.rs  input.rs  lib.rs  uia.rs  window.rs
via-hermes-plugin/via/: __init__.py  plugin.yaml
via-mcp/: Cargo.toml
via-mcp/src/: main.rs
